@@ -28,6 +28,12 @@ Release @version@-@release@ Start 24/04/2023 End XX/XX/XXXX
 17. tls/tls.c: adjusted OPENSSL_VERSION_NUMBER for TLSv1_3
 18. tls/tls.c: corrected bug invalid cipher caused SIGSEGV
 19. tls/tls.c: tlsclientmethod, tlsservermethod can have min:max as version
+- 22/08/2023
+20. set errno = EPROTO when protocol is unavailable
+21. fixed few warnings without ssl errors
+23. BUG. SSL_CTX_set_cipher_list incorrectly called instead of
+    SSL_CTX_set_ciphersuites when method is auto
+24. set min/max proto version only when min/max version variable is no-zero
 
 * Sun Apr 23 2023 16:55:15 +0000 Manvendra Bhangui <libqmail@indimail.org> 1.1.3-1.1%{?dist}
 Release 1.1.3-1.1 Start 08/02/2023 End 23/04/2023
